--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
   },
   "proxy": "http://localhost:8000",
   "keywords": [],
-  "author": "Carlos Azpurua, Nicolas Pasquale y Juan Robaldo",
+  "author": "Nicolas Pasquale",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cloudinary": "^1.14.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^5.2.0",
@@ -45,8 +44,6 @@
     "readline": "^1.3.0",
     "request": "^2.88.2",
     "sass-loader": "^7.1.0",
-    "socket.io": "^2.2.0",
-    "socket.io-client": "^2.2.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.2"
